fix chemin acces aux photos