@@ -1,10 +1,9 @@
 package fr.fixture;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.net.URL;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import fr.entity.Image;
@@ -25,7 +24,7 @@ public class ImageFixtures {
 
     @Autowired
     private Fixtures fixtures;
-    private static final String IMAGE_PATH = "src/main/resources/imageFixtures/";
+    private static final String IMAGE_PATH = "imageFixtures/";
 
     public void prepareFixtures() {
 	    String table = TablesEnum.IMAGE.getTableName();
@@ -35,13 +34,22 @@ public class ImageFixtures {
         
             for (Integer i = 1; i <= numberOfPrestations; i++) {
                 try {
-                    byte[] imageData = loadImageData(IMAGE_PATH + i.toString()+".jpg");
-                    Image image = new Image(imageData);
-                    image.setId(i);
-                    Prestation prestation = new Prestation();
-                    prestation = prestationRepository.getReferenceById(i);
-                    image.setPrestation(prestation);
-                    imageRepository.save(image);
+                    byte[] imageData = loadImageData(i.toString()+".jpg");
+
+                    if (imageData != null) {
+
+                        System.out.println("Image chargée avec succès. Taille du tableau de bytes : " + imageData.length);
+                        Image image = new Image(imageData);
+                        image.setId(i);
+                        Prestation prestation = new Prestation();
+                        prestation = prestationRepository.getReferenceById(i);
+                        image.setPrestation(prestation);
+                        imageRepository.save(image);
+
+                    } else {
+                        System.out.println("Le fichier n'a pas pu être trouvé !");
+                    }
+                    
                 } catch (Exception e) {
                         e.printStackTrace();
                 } 
@@ -51,13 +59,22 @@ public class ImageFixtures {
             for (Integer i = 1; i <= numberOfPrestations; i++) {
                 try {
                     Integer j = i+10;
-                    byte[] imageData = loadImageData(IMAGE_PATH + j.toString()+".jpg");
-                    Image image = new Image(imageData);
-                    image.setId(i+10);
-                    Prestation prestation = new Prestation();
-                    prestation = prestationRepository.getReferenceById(i);
-                    image.setPrestation(prestation);
-                    imageRepository.save(image);
+                    byte[] imageData = loadImageData(j.toString()+".jpg");
+
+                    if (imageData != null) {
+
+                        System.out.println("Image chargée avec succès. Taille du tableau de bytes : " + imageData.length);
+                        Image image = new Image(imageData);
+                        image.setId(i+10);
+                        Prestation prestation = new Prestation();
+                        prestation = prestationRepository.getReferenceById(i);
+                        image.setPrestation(prestation);
+                        imageRepository.save(image);
+
+                    } else {
+                        System.out.println("Le fichier n'a pas pu être trouvé !");
+                    }
+                    
                 } catch (Exception e) {
                     e.printStackTrace();
                 } 
@@ -67,10 +84,13 @@ public class ImageFixtures {
     }
 
     private static byte[] loadImageData(String imagePath) throws IOException {
-        String currentDirectory = System.getProperty("user.dir");
-        imagePath = currentDirectory + File.separator + imagePath;;
-        Path path = Paths.get(imagePath);
-        return Files.readAllBytes(path);
+        URL resourceUrl = ImageFixtures.class.getClassLoader().getResource(IMAGE_PATH + imagePath);
+        System.out.println(resourceUrl);
+        InputStream inputStream = ImageFixtures.class.getClassLoader().getResourceAsStream(IMAGE_PATH + imagePath);
+
+        return inputStream.readAllBytes();
+
     }
+
 
 }
